--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,8 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+.list {
+    list-style: none;
+}
+.link {
+    text-decoration: none;
+}
