--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,13 +5,16 @@
     </a>
     <nav class="header__navigation">
       <ul class="header__nav list">
-        <li><a class="nav_link link" href="./index.html">Buy</a></li>
+        <li class="nav__elem">
+          <a class="nav_link link" href="./index.html">Buy</a>
+        </li>
+
         <li><a class="nav_link link" href="./index.html">Blog</a></li>
         <li><a class="nav_link link" href="./index.html">About</a></li>
         <li><a class="nav_link link" href="./index.html">Contact</a></li>
       </ul>
     </nav>
     <button class="header__button" type="button">Book a consultation</button>
-    <a class="header__tel" href="tel:+380961111111">+380961111111</a>
+    <a class="header__tel link" href="tel:+380961111111">+380961111111</a>
   </div>
 </header>
