--- a/src/partials/latest.html
+++ b/src/partials/latest.html
@@ -1,8 +1,8 @@
 <div class="main__latest">
   <h2 class="latest__text">Latest projects</h2>
-  <ul class="latest__list list">
-    <li><a class="latest__link link" href="#">All</a></li>
-    <li><a class="latest__link link" href="#">Building</a></li>
-    <li><a class="latest__link link" href="#">Interior</a></li>
+  <ul class="latest_list list">
+    <li class="latest_item">
+      <p>Villas</p>
+    </li>
   </ul>
 </div>
