--- a/src/sass/_latest.scss
+++ b/src/sass/_latest.scss
@@ -4,34 +4,16 @@
 }
 
 .latest__text {
-   margin-left: 380px;
-    font-family: 'Space Grotesk';
+margin-left: 380px;
+font-family: 'Space Grotesk';
 font-style: normal;
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 69px;
-    /* or 144% */
-
-
-    color: #FFFFFF;
+font-weight: 700;
+font-size: 48px;
+line-height: 69px;
+color: #FFFFFF;
+margin-left: auto;
+margin-right: auto;
 }
 
-.latest__list {
-    display: flex;
-    gap: 34px;
-    padding-top: 50px;
-    padding-left: 189px;
 
-}
 
-.latest__link {
-    font-family: 'Work Sans';
-        font-style: normal;
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 21px;
-        /* identical to box height, or 131% */
-    
-    
-        color: #FFFFFF;
-}
